# uwo_lab

./: .gitignore  .gitmodules  README.md  compile.sh  compile_edge.sh
FAST_LIO/: CMakeLists.txt  package.xml
FAST_LIO/config/: mid70.yaml
FAST_LIO/launch/: mapping_mid70.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: laserMapping.cpp
SC-PGO/: CMakeLists.txt  package.xml
SC-PGO/include/aloam_velodyne/: common.h
SC-PGO/include/scancontext/: Scancontext.h
SC-PGO/launch/: fastlio_mid70.launch  fastlio_ouster64.launch  sc_mid70.launch
SC-PGO/rviz_cfg/: aloam_velodyne.rviz
SC-PGO/src/: laserPosegraphOptimization.cpp
configs/: visualize.rviz
cpu_monitor/: CMakeLists.txt  monitor.py  package.xml
cpu_monitor/launch/: cpu_monitor.launch
cpu_monitor/src/: log_cpu_total.cpp  log_ram_cpu_node.cpp
fuse_color_3d/: CMakeLists.txt  package.xml
fuse_color_3d/config/: bag_params.yaml  zed_params.yaml
fuse_color_3d/launch/: octree_study.launch  reconstruct.launch  record_bag.launch
fuse_color_3d/launch/edge-fog/: edge.launch  edge1.launch  edge2.launch  fog.launch  fog1.launch  fog2.launch  fog3.launch
fuse_color_3d/resources/: config.rviz  visualize.rviz
fuse_color_3d/scripts/: cent_time_alg.txt  cent_time_total.txt  it_time_alg.txt  it_time_total.txt  iteracoes_octree.eps  iterations.csv  iterations_cent.txt  iterations_it.txt  plot_data.py  plot_keywords.py  raw_time_total.txt  science_direct.eps  scopus.eps  tempos_algoritmos_octree.eps  tempos_totais_octree.eps  times.csv  times_only.csv
fuse_color_3d/src/: project_image_pointcloud_cpu.cpp  study_octree_efficiency_node.cpp
mesh_open3d/: CMakeLists.txt  package.xml
mesh_open3d/scripts/: mesh_server.py
mesh_open3d/src/: final_mesh.cpp
mesh_open3d/srv/: cloud.srv
plotting_logs/: .gitignore  main.py  work_data.py
uwo_pack/: CMakeLists.txt  package.xml
uwo_pack/config/: zed_params.yaml
uwo_pack/launch/: camera_mapping.launch  lidar_mapping.launch  reconstruct.launch  reconstruct_bag.launch  reconstruct_live.launch  record_bag.launch
uwo_pack/resources/: visualize.rviz
uwo_pack/src/: final_mesh.cpp  project_image_pointcloud_cpu.cpp
uwo_pack/srv/: cloud.srv
