<?xml version="1.0"?>
<package>
  <name>cpu_monitor</name>
  <version>0.0.0</version>
  <description>cpu_monitor</description>
  <author email="aes368@cornell.edu">Alex Spitzer</author>
  <maintainer email="aes368@cornell.edu">Alex Spitzer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>python-psutil</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
